# HanaJit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: RESULTS-EVOLVE.md  RESULTS-FOURWAY.md  RESULTS-MICRO.md  RESULTS-NUMPY.md  RESULTS.md  bench.py  bench_experimental.py  bench_reductions.py  bench_v016.py  evolve_bench.py  fourway.py  microbench.py  numpy_scipy.py  parallel_bench.py
docs/: api.md  architecture.md  experimental.md  gpu.md  index.html  index.md  limitations.md  numpy-coverage.md  performance.md  publishing.md  quickstart.md
examples/: demo.py  metal_check.py  rdf_narrow.py
hanajit/: __init__.py  autopar.py  cache.py  codegen.py  decorator.py  doctor.py  errors.py  evolve.py  inline.py  narrow.py  parallel.py  rewrite.py  typeinfer.py
hanajit/backends/: cpu.py  detect.py  fastcall.py  fpga.py  gpu.py  metal.py  vectorcall.py
reports/: README.md  hanajit_report_darwin_arm64.md  hanajit_report_linux_x86_64.md  hanajit_report_windows_amd64.md
site/: index.html
tests/: test_amd_valid.py  test_arrays_advanced.py  test_autopar.py  test_basic.py  test_evolve_differential.py  test_float32.py  test_fusion.py  test_gpu_arch.py  test_hyper.py  test_inline.py  test_narrow.py  test_numerics.py  test_numpy_scipy.py  test_parallel.py  test_ptx_valid.py  test_reduce_reassoc.py  test_rewrite.py  test_type_contracts.py
