[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hanajit"
version = "0.21.0"
description = "LLVM-backed JIT for Python using CPython's own parser, with transparent interpreter fallback. Targets CPU (working), NVIDIA GPU and FPGA (experimental IR emission)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Iqbal Addou", email = "cto@ezducate.ai" }]
dependencies = ["llvmlite>=0.42"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Compilers",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
]

keywords = ["jit", "compiler", "llvm", "numpy", "performance", "numba",
            "vectorization", "gpu", "ptx", "simd"]

[project.urls]
Homepage = "https://github.com/ezducate/HanaJit"
Repository = "https://github.com/ezducate/HanaJit"
Issues = "https://github.com/ezducate/HanaJit/issues"
Changelog = "https://github.com/ezducate/HanaJit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
cuda = ["cuda-python"]
test = ["pytest", "numpy"]
bench = ["numba", "scipy"]
scipy = ["scipy"]

[tool.setuptools.packages.find]
include = ["hanajit*"]
